--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -6,6 +6,11 @@ server {
     listen       9000;
     listen  [::]:9000;
     server_name  localhost;
+    client_max_body_size 1024m;
+    proxy_ignore_headers X-Accel-Expires Expires;
+
+    # use for redirect to django
+    rewrite ^/code/media/(.*)/(.*)$ /api/files/$1/$2 last;
 
     location /api {
         uwsgi_pass  webapplication;
@@ -20,11 +25,9 @@ server {
         include     /etc/nginx/uwsgi_params;
     }
 
-    location /results {
-        root   /data;
+    location /file_download {
+    # Only allow internal redirects
+        internal;
+        alias /data;
     }
-    location /tiles {
-        root   /data;
-    }
-
 }
