--- a/webapplication/Dockerfile
+++ b/webapplication/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update -y && apt-get upgrade -y\
     && add-apt-repository "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main"\
     && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -\
     && apt-get update\
-    && apt-get install postgresql-client-13 -y
+    && apt-get install postgresql-client-13 -y \
+    && apt-get install -y binutils libproj-dev gdal-bin
 
 RUN mkdir /code
 
