--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -6,11 +6,10 @@ server {
     listen       9000;
     listen  [::]:9000;
     server_name  localhost;
-    client_max_body_size 1024m;
-    proxy_ignore_headers X-Accel-Expires Expires;
 
     # use for redirect to django
-    rewrite ^/code/media/(.*)/(.*)$ /api/files/$1/$2 last;
+    rewrite ^/results/(.*)$ /api/files/results/$1 last;
+    rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
 
     location /api {
         uwsgi_pass  webapplication;
