--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - POSTGRES_PASSWORD=eiJ2koo6
     volumes:
       - ./webapplication:/code
+      - ./data:/code/data
     depends_on:
       - db
 
