13495 tiles and results for authenticated users (#3)
* start app results

* nginx configured

* fix webapplication/results/views.py

* rm media from settings and fix nginx.conf

* fix webapplication/results/views.py

* fix webapplication/results/urls.py, rm old db settings from webapplication/sip/settings.py

* 13495 fix data/.gitignore webapplication/results/views.py webapplication/results/urls.py webapplication/results/views.py

* 13495: move endpoint to publisher app, update nginx prod config

Co-authored-by: DmitriyLugovoy <dmitriy.lugovoy.79@gmail.com>
Co-authored-by: adolgarev <a.dolgarev@quantumobile.com>

--- a/webserver/nginx.conf
+++ b/webserver/nginx.conf
@@ -7,6 +7,9 @@ server {
     listen  [::]:9000;
     server_name  localhost;
 
+    rewrite ^/results/(.*)$ /api/files/results/$1 last;
+    rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
+
     location /api {
         uwsgi_pass  webapplication;
         include     /etc/nginx/uwsgi_params;
@@ -20,11 +23,8 @@ server {
         include     /etc/nginx/uwsgi_params;
     }
 
-    location /results {
-        root   /data;
+    location /file_download {
+        internal;
+        alias /data;
     }
-    location /tiles {
-        root   /data;
-    }
-
 }
