--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
   webserver:
     image: nginx:1.19.3
     volumes:
-      - ./webserver/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./webserver/default.conf.template:/etc/nginx/templates/default.conf.template
       - ./data:/data
     expose:
       - 9000
@@ -49,6 +49,11 @@ services:
       - "9000:9000"
     depends_on:
       - webapplication
+    env_file:
+      - ./webserver/.env
+    environment:
+      - SERVER_NAME=soilmate.xyz
+    command: [nginx-debug, '-g', 'daemon off;']
 
   jupyter:
     build:
