13518_add proxy_cache, update readme.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - ./webserver/.env
     environment:
       - SERVER_NAME=soilmate.xyz
-    command: [nginx-debug, '-g', 'daemon off;']
+#    command: [nginx-debug, '-g', 'daemon off;']
 
   jupyter:
     build:
