--- a/webapplication/requirements.txt
+++ b/webapplication/requirements.txt
@@ -2,9 +2,9 @@ Django==3.1.0
 django-filter==2.4.0
 django-rest-auth==0.9.5
 djangorestframework==3.12.1
-django-rest-swagger==2.2.0
 psycopg2==2.8.5
 invoke==1.4.1
 uWSGI==2.0.18
 rasterio==1.1.8
 django-flat-json-widget==0.1.1
+drf-yasg==1.20.0
