--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -16,6 +16,8 @@ services:
     build:
       context: ./webapplication
       dockerfile: prod.Dockerfile
+    volumes:
+      - /home/quantum/sip:/data
     environment:
       - DJANGO_SETTINGS_MODULE=sip.settings-prod
       - POSTGRES_DB=sip_db
@@ -32,7 +34,7 @@ services:
       context: ./
       dockerfile: ./webserver/prod.Dockerfile
     volumes:
-      - ../data:/data
+      - /home/quantum/sip:/data
     expose:
       - 80
     ports:
@@ -49,7 +51,7 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./data:/home/jovyan/work
+      - /home/quantum/sip:/home/jovyan/work
     environment:
       - JUPYTER_ENABLE_LAB=yes
     networks:
