--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
 
   db:
-    image: postgres:10.12
+    image: postgis/postgis:13-3.0
     volumes:
       - /home/quantum/db:/var/lib/postgresql/data
     environment:
