--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
   webserver:
     image: nginx:1.19.3
     volumes:
-      - ./webserver/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./webserver/default.conf:/etc/nginx/conf.d/default.conf
       - ./data:/data
     expose:
       - 9000
