--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -43,6 +43,8 @@ services:
       - webapplication
     networks:
       - sip
+    env_file:
+      - /home/quantum/webserver.env
 
   jupyter:
     build:
@@ -56,6 +58,6 @@ services:
       - JUPYTER_ENABLE_LAB=yes
     networks:
       - sip
-  
+
 networks:
   sip:
