--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -1,3 +1,5 @@
+proxy_cache_path  /data/mapboxcache     levels=1:2      keys_zone=MAPBOX:150m  inactive=31d    max_size=100g;
+
 upstream webapplication {
     server webapplication:9000;
 }
@@ -31,5 +33,18 @@ server {
     location /file_download {
         internal;
         alias /data;
+    }
+
+    location ~^/file_download/tiles/mapbox/(.*)/(.*)/(.*).png$ {
+        internal;
+        resolver 127.0.0.11 ipv6=off;
+
+        proxy_set_header Cookie '';
+
+        proxy_cache MAPBOX;
+        proxy_cache_valid 200 31d;
+        proxy_cache_use_stale  error timeout http_503 http_504;
+
+        proxy_pass https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/tiles/$1/$2/$3?access_token=${MAPBOX_ACCESS_TOKEN};
     }
 }
