--- a/webapplication/requirements.txt
+++ b/webapplication/requirements.txt
@@ -5,6 +5,10 @@ djangorestframework==3.12.1
 psycopg2==2.8.5
 invoke==1.4.1
 uWSGI==2.0.18
-rasterio==1.1.8
 django-flat-json-widget==0.1.1
+django-admin-rangefilter==0.6.3
 drf-yasg==1.20.0
+
+# geo libs
+rasterio==1.1.8
+geopandas==0.8.1
