--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -6,7 +6,9 @@
         "start": "webpack-dev-server --mode=development --inline --host 0.0.0.0",
         "build": "webpack --mode=production"
     },
-    "dependencies": {},
+    "dependencies": {
+        "@adolgarev/domwrapper": "^1.0.3"
+    },
     "devDependencies": {
         "@babel/core": "^7.10.4",
         "@babel/preset-env": "^7.10.4",
