Move development nvironment for jupyter to separate folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
 
   jupyter:
     build:
-      context: ./jupyter
+      context: ./jupyter/Development
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
