--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: postgis/postgis:13-3.0
     expose:
       - 5432
+    ports:
+    - "5433:5432"
     environment:
       - POSTGRES_DB=sip_db
       - POSTGRES_USER=sip
@@ -21,7 +23,7 @@ services:
       - POSTGRES_PASSWORD=eiJ2koo6
     volumes:
       - ./webapplication:/code
-      - ./data:/code/data
+      - ./data:/data
     depends_on:
       - db
 
