--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -7,7 +7,8 @@
         "build": "webpack --mode=production"
     },
     "dependencies": {
-        "@adolgarev/domwrapper": "^1.0.3"
+        "@adolgarev/domwrapper": "^1.0.3",
+        "wicket": "^1.3.6"
     },
     "devDependencies": {
         "@babel/core": "^7.10.4",
