--- a/jupyter/PW/requirements.txt
+++ b/jupyter/PW/requirements.txt
@@ -1,5 +1,9 @@
-geojson==2.5.0
-rasterio==1.1.8
+tqdm==4.51.0
 Shapely==1.7.1
-pyproj==2.6.1.post1
-requests==2.24.0
+geopandas==0.8.1
+pandas==1.1.3
+sentinelsat==0.14
+matplotlib==3.3.2
+descartes==1.1.0
+rasterio==1.1.8
+ipykernel==5.3.4
