--- a/jupyter/example/requirements_37.txt
+++ b/jupyter/example/requirements_37.txt
@@ -1,6 +1,5 @@
-git+ssh://git@github.com/QuantuMobileSoftware/sentinel2tools.git@master
+git+https://github.com/QuantuMobileSoftware/sentinel2tools.git@f8d8a606a0314c1b163528db8d19c327db1747a3
 geojson==2.5.0
 rasterio==1.1.8
 Shapely==1.7.1
 pyproj==2.6.1.post1
-
