13851 vy example notebook (#27)
* 13851: add sentinel2tools lib

* 13851: update example Dockerfile

* 13851: update geotiff

* 13851: install libspatialindex, git

* 13851: add using sentinel2tools lib

* 13851: add sentinel2tools lib

* 13851: add sentinel2tools lib

* 13851: add gitkeep

* 13851: add .secret ignore

* 13851: upd commit ref

* 13851: upd commit ref

Co-authored-by: Vladyslav Yaloveha <v.yaloveha@quantumobile.com>
Co-authored-by: adolgarev <a.dolgarev@quantumobile.com>

--- a/jupyter/example/Dockerfile
+++ b/jupyter/example/Dockerfile
@@ -1,4 +1,12 @@
 FROM jupyter/scipy-notebook:45bfe5a474fa
+USER root
+
+RUN apt-get update && \
+    apt-get install -y \
+    git \
+    gcc libspatialindex-dev python3-dev
+
+USER $NB_UID
 
 COPY requirements.txt requirements_37.txt /tmp/
 RUN pip install --requirement /tmp/requirements.txt && \
