--- a/jupyter/example/requirements_37.txt
+++ b/jupyter/example/requirements_37.txt
@@ -1,6 +1,5 @@
+git+https://github.com/QuantuMobileSoftware/sentinel2tools.git@678d88c49e56779f64f71c9da382a90ef8907979
 geojson==2.5.0
 rasterio==1.1.8
 Shapely==1.7.1
 pyproj==2.6.1.post1
-requests==2.24.0
-
