--- a/jupyter/IED/requirements.txt
+++ b/jupyter/IED/requirements.txt
@@ -3,3 +3,4 @@ rasterio==1.1.8
 Shapely==1.7.1
 pyproj==2.6.1.post1
 requests==2.24.0
+git+https://github.com/QuantuMobileSoftware/sentinel2tools.git@678d88c49e56779f64f71c9da382a90ef8907979
