--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@adolgarev/domwrapper": "^1.0.3",
+        "plotly.js-dist": "^1.57.1",
         "wicket": "^1.3.6"
     },
     "devDependencies": {
