--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,3 +60,4 @@ services:
       - ./data:/home/jovyan/work
     environment:
       - JUPYTER_ENABLE_LAB=yes
+      - AOI=/home/jovyan/work/notebooks/sip/Pechenihy.geojson
