--- a/jupyter/PBD/requirements_37.txt
+++ b/jupyter/PBD/requirements_37.txt
@@ -1,13 +1,14 @@
-geojson==2.5.0
+git+https://github.com/QuantuMobileSoftware/sentinel2tools.git@678d88c49e56779f64f71c9da382a90ef8907979
+# geojson==2.5.0
 rasterio==1.1.8
 Shapely==1.7.1
 pyproj==2.6.1.post1
-requests==2.24.0
+# requests==2.24.0
 opencv-python==4.4.0.46
-imageio==2.9.0
-pandas==1.0.5
+# imageio==2.9.0
+# pandas==1.0.5
 tqdm==4.47.0
-geopandas==0.8.1
+# geopandas==0.8.1
 scikit-image==0.16.2
-scipy==1.5.0
-pygeos==0.8
+# scipy==1.5.0
+# pygeos==0.8
