Revert "Revert "Task 14151, DS. Add GPU to PlotBoundaries", add GPU support (#58)"
This reverts commit 766664c215d342d6903b92161036ec09d6bf507f.

--- a/jupyter/PBD/Dockerfile
+++ b/jupyter/PBD/Dockerfile
@@ -1,14 +1,13 @@
-FROM cschranz/gpu-jupyter:latest
+FROM jupyter/scipy-notebook:45bfe5a474fa
 
 USER root
-
 RUN apt-get update && \
     apt-get install -y \
     git \
     gcc libspatialindex-dev python3-dev
 
-COPY requirements_37.txt /tmp/
-RUN pip install --requirement /tmp/requirements_37.txt && \
+COPY requirements.txt requirements_37.txt /tmp/
+RUN pip install --requirement /tmp/requirements.txt && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
 
@@ -23,7 +22,13 @@ RUN conda create --quiet --yes -p $CONDA_DIR/envs/$conda_env python=$py_ver ipyt
 RUN $CONDA_DIR/envs/${conda_env}/bin/python -m ipykernel install --user --name=${conda_env} && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
+
 USER $NB_UID
+
+# any additional pip installs
+RUN $CONDA_DIR/envs/${conda_env}/bin/pip install --requirement /tmp/requirements_37.txt && \
+                                                   fix-permissions $CONDA_DIR && \
+                                                   fix-permissions /home/$NB_USER
 
 # prepend conda environment to path
 ENV PATH $CONDA_DIR/envs/${conda_env}/bin:$PATH
