--- a/jupyter/example/Dockerfile
+++ b/jupyter/example/Dockerfile
@@ -1,15 +1,29 @@
 FROM jupyter/scipy-notebook:45bfe5a474fa
 
 USER root
-RUN apt-get update && \
-    apt-get install -y \
-    git \
-    gcc libspatialindex-dev python3-dev
 
 COPY requirements.txt requirements_37.txt /tmp/
 RUN pip install --requirement /tmp/requirements.txt && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
+
+RUN pip install nbdime
+
+RUN pip install jupyter_contrib_nbextensions
+RUN jupyter labextension install @jupyterlab/github
+
+RUN pip install jupyterlab-git
+
+RUN jupyter labextension install @jupyterlab/git
+
+RUN jupyter serverextension enable --sys-prefix jupyterlab_github git
+
+
+RUN pip install --upgrade jupyterlab_gitplus
+RUN jupyter labextension install @reviewnb/jupyterlab_gitplus
+RUN jupyter serverextension enable --py jupyterlab_gitplus
+
+RUN jupyter lab build
 
 # environment name, python 3.x version
 ARG conda_env=python37
@@ -35,3 +49,5 @@ ENV PATH $CONDA_DIR/envs/${conda_env}/bin:$PATH
 
 # Using python37 env by default
 ENV CONDA_DEFAULT_ENV ${conda_env}
+
+
