13446: add git for jupyter notebook

--- a/jupyter/example/Dockerfile
+++ b/jupyter/example/Dockerfile
@@ -2,28 +2,19 @@ FROM jupyter/scipy-notebook:45bfe5a474fa
 
 USER root
 
+RUN apt-get update && \
+    apt-get install -y \
+    git \
+    gcc libspatialindex-dev python3-dev
+
 COPY requirements.txt requirements_37.txt /tmp/
 RUN pip install --requirement /tmp/requirements.txt && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
 
-RUN pip install nbdime
-
-RUN pip install jupyter_contrib_nbextensions
-RUN jupyter labextension install @jupyterlab/github
-
-RUN pip install jupyterlab-git
-
-RUN jupyter labextension install @jupyterlab/git
-
-RUN jupyter serverextension enable --sys-prefix jupyterlab_github git
-
-
-RUN pip install --upgrade jupyterlab_gitplus
-RUN jupyter labextension install @reviewnb/jupyterlab_gitplus
-RUN jupyter serverextension enable --py jupyterlab_gitplus
-
-RUN jupyter lab build
+RUN pip install jupyter_contrib_nbextensions jupyterlab-git && \
+    jupyter labextension install @jupyterlab/git && \
+    jupyter lab build
 
 # environment name, python 3.x version
 ARG conda_env=python37
@@ -36,8 +27,8 @@ RUN conda create --quiet --yes -p $CONDA_DIR/envs/$conda_env python=$py_ver ipyt
 RUN $CONDA_DIR/envs/${conda_env}/bin/python -m ipykernel install --user --name=${conda_env} && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
-USER $NB_UID
 
+USER $NB_UID
 
 # any additional pip installs
 RUN $CONDA_DIR/envs/${conda_env}/bin/pip install --requirement /tmp/requirements_37.txt && \
@@ -50,4 +41,5 @@ ENV PATH $CONDA_DIR/envs/${conda_env}/bin:$PATH
 # Using python37 env by default
 ENV CONDA_DEFAULT_ENV ${conda_env}
 
-
+# github token: https://github.com/settings/tokens
+RUN git clone https://72976594646dea5629c7605bfe505166391faa07@github.com/QuantuMobileSoftware/sip /home/$NB_USER/git
