--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,6 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./data:/home/jovyan/work
+      - ../sip:/home/jovyan/work
     environment:
       - JUPYTER_ENABLE_LAB=yes
