--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: postgis/postgis:13-3.0
     expose:
       - 5432
+    ports:
+      - "5433:5432"
     environment:
       - POSTGRES_DB=sip_db
       - POSTGRES_USER=sip
@@ -57,6 +59,13 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./data:/home/jovyan/work
+      - ${LOCAL_WORKING_DIR}:/home/jovyan/work
     environment:
       - JUPYTER_ENABLE_LAB=yes
+    container_name: pbd_jupyter
+    command: "start-notebook.sh \
+    --NotebookApp.password=${NOTEBOOK_PASSWORD} \
+    "
+    env_file:
+      - .env
+    restart: always
