14212 fix docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,13 +58,15 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
-    volumes:
-      - ${LOCAL_WORKING_DIR}:/home/jovyan/work
     environment:
       - JUPYTER_ENABLE_LAB=yes
-      - NOTEBOOK_PASSWORD=argon2:$argon2id$v=19$m=10240,t=10,p=8$Cfx8QuGthz224RKGPWA4uw$J0e17gE3zzRZGpLa/z6a+g
     container_name: pbd_jupyter
     command: "start-notebook.sh \
     --NotebookApp.password=${NOTEBOOK_PASSWORD} \
+    --NotebookApp.allow_password_change=False \
     "
     restart: always
+    volumes:
+      - ./data:/home/jovyan/work
+    env_file:
+      - .env
