14212: remove unnecessary things from docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,12 +58,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
-    environment:
-      - 'JUPYTER_ENABLE_LAB=yes'
-    container_name: pbd_jupyter
     command: "start-notebook.sh \
     --NotebookApp.password='argon2:$$argon2id$$v=19$$m=10240,t=10,p=8$$Cfx8QuGthz224RKGPWA4uw$$J0e17gE3zzRZGpLa/z6a+g' \
     "
-    restart: always
     volumes:
       - ./data:/home/jovyan/work
+    environment:
+      - JUPYTER_ENABLE_LAB=yes
