14456: add copy editor script inside image

--- a/jupyter/example/Dockerfile
+++ b/jupyter/example/Dockerfile
@@ -36,3 +36,6 @@ ENV PATH $CONDA_DIR/envs/${conda_env}/bin:$PATH
 
 # Using python37 env by default
 ENV CONDA_DEFAULT_ENV ${conda_env}
+
+RUN mkdir code
+COPY ./code code/
