14509: add prod volume with webapplication contents

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -17,6 +17,7 @@ services:
       context: ./webapplication
       dockerfile: prod.Dockerfile
     volumes:
+      - ./webapplication:/code
       - /home/quantum/sip:/data
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
