--- a/jupyter/PBDNN/requirements.txt
+++ b/jupyter/PBDNN/requirements.txt
@@ -6,3 +6,10 @@ git+https://github.com/QuantuMobileSoftware/sentinel2tools.git@678d88c49e56779f6
 matplotlib==3.3.2
 descartes==1.1.0
 rasterio==1.1.8
+albumentations==0.5.2
+torch==1.7.1
+torchvision==0.8.2
+segmentation-models-pytorch==0.1.3
+opencv-python==4.4.0.46
+opencv-python-headless==4.5.1.48
+tqdm==4.51.0
