--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/notebooks/pbdnn/sip_plot_boundary_detection_nn"]
 	path = data/notebooks/pbdnn/sip_plot_boundary_detection_nn
-	url = https://72976594646dea5629c7605bfe505166391faa07@github.com/QuantuMobileSoftware/sip_plot_boundary_detection_nn
+	url = https://github.com/QuantuMobileSoftware/sip_plot_boundary_detection_nn.git
