--- a/webapplication/uwsgi.ini
+++ b/webapplication/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
 chdir = /code
 module = sip.wsgi:application
-socket = 0.0.0.0:9000
+socket = :9000
+;http = 0.0.0.0:9000
 
 static-map = /static=/code/static
 static-map = /media=/code/media
