--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -7,7 +7,7 @@ upstream webapplication {
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+#    server_name  localhost;
 
     gzip on;
     gzip_types      text/plain application/xml application/javascript;
@@ -42,7 +42,8 @@ server {
 
     location ~^/file_download/tiles/mapbox/(.*)/(.*)/(.*).png$ {
         internal;
-        resolver 127.0.0.11 ipv6=off;
+#        resolver 127.0.0.11 ipv6=off;
+        resolver 8.8.8.8;
 
         proxy_set_header Cookie '';
 
