--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -16,6 +16,7 @@
         "@babel/preset-env": "^7.10.4",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
+        "dotenv": "^8.2.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "html-webpack-template": "^6.2.0",
