--- a/jupyter/PBDNN/requirements.txt
+++ b/jupyter/PBDNN/requirements.txt
@@ -12,3 +12,6 @@ torchvision==0.8.2
 segmentation-models-pytorch==0.1.3
 opencv-python==4.4.0.46
 opencv-python-headless==4.5.1.48
+pytorch-lightning==0.10.0
+pytorch-toolbelt==0.4.2
+yacs==0.1.8
