--- a/k8s/sip_ingress.yaml
+++ b/k8s/sip_ingress.yaml
@@ -3,11 +3,9 @@ kind: Ingress
 metadata:
   name: sip-ingress
   namespace: sip-prod
-#  annotations:
-#    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - host: soilmate.example.com
+  - host: soilmate.example.com  # TODO
     http:
       paths:
         - pathType: Prefix
