--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
   - namespace-sip-prod.yaml
+  - rbac.yaml
   - postgis-config.yaml
   - postgis-deployment.yaml
   - nfs-pv.yaml
@@ -7,8 +8,7 @@ resources:
   - webapplication-deployment.yaml
   - webserver-config.yaml
   - webserver-deployment.yaml
-#  - jupyter_example-deployment.yaml
-#  - jupyter_pbdnn-deployment.yaml
-#  - jupyter_pw-deployment.yaml
+  #  - jupyter_example-deployment.yaml
+  #  - jupyter_pbdnn-deployment.yaml
+  #  - jupyter_pw-deployment.yaml
   - sip_ingress.yaml
-
