--- a/k8s/nfs-pv.yaml
+++ b/k8s/nfs-pv.yaml
@@ -9,6 +9,8 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 192.168.0.37
-    path: "/home/dyman/Projects/quantum/sip/data" # TODO
+    server: 192.168.1.58
+    path: "/volume1/SIP"
+#    server: 192.168.0.37
+#    path: "/home/dyman/Projects/quantum/sip/data"
     readOnly: false
