--- a/k8s/postgis-deployment.yaml
+++ b/k8s/postgis-deployment.yaml
@@ -26,7 +26,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /minikube-host/postgres_db/sip_devel
+    path: /minikube-host/db
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
