14907 update k8s/postgis-deployment

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
   - namespace-sip-prod.yaml
   - rbac.yaml
+  - postgres-pv.yaml
+  - postgres-pvc.yaml
   - postgis-config.yaml
   - postgis-deployment.yaml
   - nfs-pv.yaml
