--- a/k8s/postgres-pv.yaml
+++ b/k8s/postgres-pv.yaml
@@ -9,5 +9,6 @@ spec:
     storage: 500Mi
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: "/db"
