--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
