--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.6",
+    "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
@@ -65,5 +66,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "npm run lint"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
