--- a/k8s/nfs-pv.yaml
+++ b/k8s/nfs-pv.yaml
@@ -9,6 +9,6 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 192.168.1.58
-    path: "/volume1/SIP"
+    server: 192.168.1.34
+    path: "/home/sip/sip_data"
     readOnly: false
