--- a/k8s/webapplication-deployment.yaml
+++ b/k8s/webapplication-deployment.yaml
@@ -35,31 +35,35 @@ spec:
         tier: backend
     spec:
       containers:
-      - image: quantumobile/sip-base:static
-        name: webapplication
-        command: ['/bin/bash', '-c', 'exec invoke run-prod']
-        envFrom:
+        - name: webapplication
+          image: 192.168.1.34:5000/sip-webapplication:latest
+          imagePullPolicy: "Always"
+          #command: ['/bin/bash', '-c', 'exec invoke run']
+          command: ['/bin/bash', '-c', 'exec invoke run-prod']
+          envFrom:
           - configMapRef:
               name: postgis-db-config
-        env:
-          - name: DJANGO_SETTINGS_MODULE
-            value: sip.settings-prod
-          - name: POSTGRES_HOST
-            value: sip-postgis
-        ports:
-        - containerPort: 9000
-          name: sip
-        volumeMounts:
-        - name: sip-data-persistent-storage
-          mountPath: /data
-        - name: docker-socket
-          mountPath: /var/run/docker.sock
+          env:
+            - name: DJANGO_SETTINGS_MODULE
+              value: sip.settings-prod
+            - name: POSTGRES_HOST
+              value: sip-postgis
+          ports:
+            - containerPort: 9000
+              name: sip
+          volumeMounts:
+            - name: sip-data-persistent-storage
+              mountPath: /data
+            - name: docker-socket
+              mountPath: /var/run/docker.sock
       volumes:
-      - name: sip-data-persistent-storage
-        persistentVolumeClaim:
-          claimName: nfs-sip-data-pvc
-      - name: docker-socket
-        hostPath:
-          path: /var/run/docker.sock
-          type: Socket
+        - name: sip-data-persistent-storage
+          persistentVolumeClaim:
+            claimName: nfs-sip-data-pvc
+        - name: docker-socket
+          hostPath:
+            path: /var/run/docker.sock
+            type: Socket
       serviceAccountName: job-robot  # Name of the ServiceAccount.
+      imagePullSecrets:
+        - name: regcred
