--- a/.dockerignore
+++ b/.dockerignore
@@ -2,28 +2,8 @@
 
 # dependencies
 .idea
-/client/node_modules
-__pycache__/
+/webviewer/node_modules
+
+pycache__/
 static/
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-.venv
-.vscode
-/data
+data/mapboxcache
