--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -7,10 +7,11 @@ resources:
   - postgis-deployment.yaml
   - nfs-pv.yaml
   - nfs-pvc.yaml
+#  - webapplication-development-deployment.yaml
   - webapplication-deployment.yaml
   - webserver-config.yaml
   - webserver-deployment.yaml
-  - jupyter_example-deployment.yaml
+#  - jupyter_example-deployment.yaml
 #  - jupyter_pbdnn-deployment.yaml
 #  - jupyter_pw-deployment.yaml
   - sip_ingress.yaml
