--- a/k8s/nfs-pv.yaml
+++ b/k8s/nfs-pv.yaml
@@ -4,11 +4,11 @@ metadata:
   name: nfs-sip-data
 spec:
   capacity:
-    storage: 1Gi
+    storage: 10Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.34
-    path: "/home/sip/sip_data"
+    path: "/home/nfs/sip_data"
     readOnly: false
