--- a/k8s/webserver-deployment.yaml
+++ b/k8s/webserver-deployment.yaml
@@ -36,8 +36,9 @@ spec:
         tier: frontend
     spec:
       containers:
-        - image: 192.168.1.34:5000/sip-webserver:latest
-          name: frontend
+        - name: frontend
+          image: 192.168.1.34:5000/sip-webserver:latest
+          imagePullPolicy: "Always"
           envFrom:
             - configMapRef:
                 name: webserver-config
