--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
+    "wicket": "^1.3.6",
     "yup": "^0.32.9"
   },
   "scripts": {
