--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -12,12 +12,14 @@
     "formik": "^2.2.6",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
+    "react-leaflet-draw": "^0.19.8",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
