14907 updated all files for install and run k8s cluster

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -16,4 +16,4 @@ resources:
 #  - jupyter_example-deployment.yaml
 #  - jupyter_pbdnn-deployment.yaml
 #  - jupyter_pw-deployment.yaml
-  - sip_ingress.yaml
+#  - sip_ingress.yaml
