--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^2.2.1",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
+    "leaflet-editable": "^1.2.0",
     "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
