--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-icons": "^4.2.0",
