--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "leaflet-editable": "^1.2.0",
+    "leaflet.vectorgrid": "^1.3.0",
     "lodash-es": "^4.17.21",
     "polished": "^4.1.2",
     "react": "^17.0.2",
