--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
     "react-leaflet-draw": "^0.19.8",
+    "react-range": "^1.8.9",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
