--- a/jupyter/PW/Dockerfile
+++ b/jupyter/PW/Dockerfile
@@ -35,3 +35,5 @@ RUN fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
 
 USER $NB_UID
+
+COPY jupyter_notebook_config.json /etc/jupyter/
