--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -31,6 +31,10 @@ server {
         include     /etc/nginx/uwsgi_params;
     }
     location /static {
+        root   /usr/share/nginx/html;
+        try_files $uri @static;
+    }
+    location @static {
         uwsgi_pass  webapplication;
         include     /etc/nginx/uwsgi_params;
     }
