--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -16,7 +16,7 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        try_files $uri /index.html;
     }
 
     rewrite ^/results/(.*)$ /api/files/results/$1 last;
