--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-hotjar": "^3.0.1",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
     "react-leaflet-draw": "^0.19.8",
