--- a/soilmate_frontend/package.json
+++ b/soilmate_frontend/package.json
@@ -10,6 +10,7 @@
     "@tmcw/togeojson": "^4.4.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.6",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.7.1",
