--- a/jupyter/PW/environment.yml
+++ b/jupyter/PW/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7.8
+  - python==3.7.8
   - pip==20.2.4
   - tqdm==4.51.0
   - Shapely==1.7.1
@@ -30,6 +30,6 @@ dependencies:
     - torch==1.4.0
     - torchvision==0.5.0
     - tqdm==4.51.0
-    - boto3=1.18.44
+    - boto3==1.18.44
 prefix: /opt/conda/envs/PW
 
