Revert "Run also publish thread"
This reverts commit 4ec67adc8e82827b91a81df5658192262d163465.

--- a/docker-compose-ukraine.yml
+++ b/docker-compose-ukraine.yml
@@ -25,7 +25,7 @@ services:
       - POSTGRES_DB=sip_db
       - POSTGRES_USER=sip
       - POSTGRES_PASSWORD=Foo0roo0
-    command: /bin/bash -c "exec invoke run-prod"
+    command: /bin/bash -c "exec invoke run-ukraine"
     depends_on:
       - db
     networks:
