--- a/docker-compose-ukraine.yml
+++ b/docker-compose-ukraine.yml
@@ -35,6 +35,14 @@ services:
     build:
       context: ./
       dockerfile: ./webserver/prod.Dockerfile
+      args:
+        - REACT_APP_HOTJAR_ID=${REACT_APP_HOTJAR_ID}
+        - REACT_APP_HOTJAR_SV=${REACT_APP_HOTJAR_SV}
+        - REACT_APP_EMAILJS_SERVICE_ID=${REACT_APP_EMAILJS_SERVICE_ID}
+        - REACT_APP_EMAILJS_TEMPLATE_ID=${REACT_APP_EMAILJS_TEMPLATE_ID}
+        - REACT_APP_EMAILJS_USER_ID=${REACT_APP_EMAILJS_USER_ID}
+        - REACT_APP_AUTOLOGIN=${REACT_APP_AUTOLOGIN}
+        - REACT_APP_AUTOPASSWORD=${REACT_APP_AUTOPASSWORD}
     volumes:
       - ../data:/data
       - /etc/letsencrypt:/etc/letsencrypt
