--- a/docker-compose-ukraine.yml
+++ b/docker-compose-ukraine.yml
@@ -57,7 +57,7 @@ services:
     networks:
       - sip
     env_file:
-      - ../webserver.env
+      - /home/ec2-user/webserver.env
 
 networks:
   sip:
